Se agrego video y ajustos secciones

--- a/index.html
+++ b/index.html
@@ -70,6 +70,7 @@
                 </div>
             </section>
 
+            <!-- Start SQUEEZE THINGS UP -->
             <section class="holy-souce-section container">
                 <div class="row holy-souce-section-heading-title">
                     <p>Tried and true since 1870</p>
@@ -116,64 +117,75 @@
                     </div>
                 </div>
             </section>
+            <!-- End SQUEEZE THINGS UP -->
 
-            <section class="holy-souce-section">
-                <div class="holy-souce-section-heading-">
+            <!-- Start FROM SEEDS TO BOTTLES -->
+            <section class="holy-souce-section container">
+                <div class="row holy-souce-section-heading-title">
                     <p>Years of authentic process</p>
                 </div>
-                <div class="holy-souce-section-heading-title">
-                    <h2>From seeds to <span>bottles</span></h2>
-                </div>
-                <div class="holy-souce-section-heading-paragraph">
-                    <p>We've been working with family farmers for generations to grow our delicious original taste.</p>
-                </div>
-
-                <div class="holy-souce-section-product">
-                    <div class="holy-souce-section-product-background">
+                <div class="row holy-souce-section-heading d-flex align-items-end">
+                    <div class="holy-souce-section-heading-title col d-flex justify-content-start">
+                        <h2>From seeds to <br><span>bottles</span></h2>
                     </div>
-                    <div class="holy-souce-section-product-image">
+                    <div class="holy-souce-section-heading-link col d-flex justify-content-start">
+                        <p>We've been working with family farmers for <br>generations to grow our delicious original <br>taste.</p>
+                    </div>
+                </div>
+                <div class="row holy-souce-section-process">
+                    <div class="holy-souce-section-process-background">
+                    </div>
+                    <div class="holy-souce-section-process-image col">
                         <img src="src/assets/images/general/fingers-holding-chili.png" alt="Fingers holding chili">
                     </div>
-                    <div class="holy-souce-section-product-item">
-                        <div class="holy-souce-section-product-item-title">
-                            <div class="item-title-number">
-                                <p>01</p>
-                            </div>
-                            <div class="item-title-text">
-                                <p>Superior Seeds Selection</p>
-                            </div>
-                            <div class="item-title-icon">
-                                <i class="fas fa-chevron-down"></i>
-                            </div>
-                        </div>
-                        <div class="holy-souce-section-product-item-title">
-                            <div class="item-title-number">
-                                <p>02</p>
-                            </div>
-                            <div class="item-title-text">
-                                <p>Sowing the Seeds</p>
+                    <div class="holy-souce-section-process-item col">
+                        <div class="holy-souce-section-process-item-title">
+                            <div class="item-title-number-text">
+                                <div class="item-title-number">
+                                    <p>01</p>
+                                </div>
+                                <div class="item-title-text">
+                                    <p>Superior Seeds Selection</p>
+                                </div>
                             </div>
                             <div class="item-title-icon">
                                 <i class="fas fa-chevron-down"></i>
                             </div>
                         </div>
-                        <div class="holy-souce-section-product-item-title">
-                            <div class="item-title-number">
-                                <p>03</p>
-                            </div>
-                            <div class="item-title-text">
-                                <p>Handmade Processing</p>
+                        <div class="holy-souce-section-process-item-title">
+                            <div class="item-title-number-text">
+                                <div class="item-title-number">
+                                    <p>02</p>
+                                </div>
+                                <div class="item-title-text">
+                                    <p>Sowing the Seeds</p>
+                                </div>
                             </div>
                             <div class="item-title-icon">
                                 <i class="fas fa-chevron-down"></i>
                             </div>
                         </div>
-                        <div class="holy-souce-section-product-item-title">
-                            <div class="item-title-number">
-                                <p>03</p>
+                        <div class="holy-souce-section-process-item-title">
+                            <div class="item-title-number-text">
+                                <div class="item-title-number">
+                                    <p>03</p>
+                                </div>
+                                <div class="item-title-text">
+                                    <p>Handmade Processing</p>
+                                </div>
                             </div>
-                            <div class="item-title-text">
-                                <p>Barrel-Aged for Bold Flavour</p>
+                            <div class="item-title-icon">
+                                <i class="fas fa-chevron-down"></i>
+                            </div>
+                        </div>
+                        <div class="holy-souce-section-process-item-title">
+                            <div class="item-title-number-text">
+                                <div class="item-title-number">
+                                    <p>03</p>
+                                </div>
+                                <div class="item-title-text">
+                                    <p>Barrel-Aged for Bold Flavour</p>
+                                </div>
                             </div>
                             <div class="item-title-icon">
                                 <i class="fas fa-chevron-down"></i>
@@ -182,29 +194,36 @@
                     </div>
                 </div>
             </section>
+            <!-- End FROM SEEDS TO BOTTLES -->
 
-            <section class="holy-souce-section">
-                <div class="holy-souce-section-heading-title">
+            <!-- Start Watch our Authentic Process -->
+            <section class="holy-souce-section container">
+                <div class="holy-souce-section-heading-title-video">
                     <h2>Watch our <span>Authentic</span> Process</h2>
                 </div>
-                <div class="holy-souce-section-product">
+                <div class="holy-souce-section-video">
                     <div class="holy-souce-section-product-video">
-                        <img class="img-fluid" src="src/assets/images/general/video-chili.png" alt="Product Chili Sauce">
+                        <video src="src/assets/video/watch-our-authentic-process.mp4" controls>
+                        </video>
                     </div>
                 </div>
             </section>
+            <!-- End Watch our Authentic Process -->
 
-            <section class="holy-souce-section">
-                <div class="holy-souce-section-heading-">
+            <!-- Start Simple & tasty recipes -->
+            <section class="holy-souce-section container">
+                <div class="row holy-souce-section-heading-title">
                     <p>Light things up</p>
                 </div>
-                <div class="holy-souce-section-heading-title">
-                    <h2>Simple & tasty <span>recipes</span></h2>
-                </div>
-                <div class="holy-souce-section-heading-link">
-                    <a href="">
-                        Browse all recipes >
-                    </a>
+                <div class="row holy-souce-section-heading d-flex align-items-end">
+                    <div class="holy-souce-section-heading-title col d-flex justify-content-start">
+                        <h2>Simple & tasty <br><span>recipes</span></h2>
+                    </div>
+                    <div class="holy-souce-section-heading-link col d-flex justify-content-end">
+                        <a href="">
+                            <p>Browse all recipes ></p>
+                        </a>
+                    </div>
                 </div>
 
                 <div class="holy-souce-section-all-recipes">
