Se ajusto index.html versión desktop

--- a/index.html
+++ b/index.html
@@ -227,108 +227,122 @@
                 </div>
 
                 <div class="holy-souce-section-all-recipes">
+
                     <div class="recipes">
                         <div class="recipes-image">
                             <img src="src/assets/images/typical-dishes/pepper-and-sweetcorn-ramen.png" alt="">
                         </div>
-                        <div class="recipes-title">
-                            <p>Pepper and Sweetcorn Ramen</p>
-                        </div>
-                        <div class="recipes-read-link">
-                            <a href="">
-                                Read recipes >
-                            </a>
-                        </div>
-                        <hr>
-                        <div class="recipes-time-portion">
-                            <div class="recipe-time">
-                                <p>Time</p>
-                                <p>20 Mins</p>
+                        <div class="recipe-description">
+                            <div class="recipes-title">
+                                <p>Pepper and <br>Sweetcorn Ramen</p>
                             </div>
-                            <div class="recipe-portion">
-                                <p>Portion</p>
-                                <p>2 Persons</p>
+                            <div class="recipes-read-link">
+                                <a href="">
+                                    <span>Read recipes</span> >
+                                </a>
+                            </div>
+                            <hr>
+                            <div class="recipes-time-portion">
+                                <div class="recipe-time">
+                                    <p>Time</p>
+                                    <p>20 Mins</p>
+                                </div>
+                                <div class="recipe-portion">
+                                    <p>Portion</p>
+                                    <p>2 Persons</p>
+                                </div>
                             </div>
                         </div>
                     </div>
+
                     <div class="recipes">
                         <div class="recipes-image">
                             <img src="src/assets/images/typical-dishes/spicy-chicken-curry-noodles.png" alt="">
                         </div>
-                        <div class="recipes-title">
-                            <p>Spicy Chicken Curry Noodles</p>
-                        </div>
-                        <div class="recipes-read-link">
-                            <a href="">
-                                Read recipes >
-                            </a>
-                        </div>
-                        <hr>
-                        <div class="recipes-time-portion">
-                            <div class="recipe-time">
-                                <p>Time</p>
-                                <p>10 Mins</p>
+                        <div class="recipe-description">
+                            <div class="recipes-title">
+                                <p>Spicy Chicken <br>Curry Noodles</p>
                             </div>
-                            <div class="recipe-portion">
-                                <p>Portion</p>
-                                <p>1 Persons</p>
+                            <div class="recipes-read-link">
+                                <a href="">
+                                    <span>Read recipes</span> >
+                                </a>
+                            </div>
+                            <hr>
+                            <div class="recipes-time-portion">
+                                <div class="recipe-time">
+                                    <p>Time</p>
+                                    <p>10 Mins</p>
+                                </div>
+                                <div class="recipe-portion">
+                                    <p>Portion</p>
+                                    <p>1 Persons</p>
+                                </div>
                             </div>
                         </div>
                     </div>
+
                     <div class="recipes">
                         <div class="recipes-image">
                             <img src="src/assets/images/typical-dishes/cheddar-cheese-and-shell-salad.png" alt="">
                         </div>
-                        <div class="recipes-title">
-                            <p>Cheddar Cheese and Shell Salad</p>
-                        </div>
-                        <div class="recipes-read-link">
-                            <a href="">
-                                Read recipes >
-                            </a>
-                        </div>
-                        <hr>
-                        <div class="recipes-time-portion">
-                            <div class="recipe-time">
-                                <p>Time</p>
-                                <p>25 Mins</p>
+                        <div class="recipe-description">
+                            <div class="recipes-title">
+                                <p>Cheddar Cheese <br>and Shell Salad</p>
                             </div>
-                            <div class="recipe-portion">
-                                <p>Portion</p>
-                                <p>1 Persons</p>
+                            <div class="recipes-read-link">
+                                <a href="">
+                                    <span>Read recipes</span> >
+                                </a>
+                            </div>
+                            <hr>
+                            <div class="recipes-time-portion">
+                                <div class="recipe-time">
+                                    <p>Time</p>
+                                    <p>25 Mins</p>
+                                </div>
+                                <div class="recipe-portion">
+                                    <p>Portion</p>
+                                    <p>1 Persons</p>
+                                </div>
                             </div>
                         </div>
                     </div>
+
                     <div class="recipes">
                         <div class="recipes-image">
                             <img src="src/assets/images/typical-dishes/spicy-pepper-soybean-tofu.png" alt="">
                         </div>
-                        <div class="recipes-title">
-                            <p>Spicy Pepper Soybean Tofu</p>
-                        </div>
-                        <div class="recipes-read-link">
-                            <a href="">
-                                Read recipes >
-                            </a>
-                        </div>
-                        <hr>
-                        <div class="recipes-time-portion">
-                            <div class="recipe-time">
-                                <p>Time</p>
-                                <p>15 Mins</p>
+                        <div class="recipe-description">
+                            <div class="recipes-title">
+                                <p>Spicy Pepper <br>Soybean Tofu</p>
                             </div>
-                            <div class="recipe-portion">
-                                <p>Portion</p>
-                                <p>1 Persons</p>
+                            <div class="recipes-read-link">
+                                <a href="">
+                                    <span>Read recipes</span> >
+                                </a>
+                            </div>
+                            <hr>
+                            <div class="recipes-time-portion">
+                                <div class="recipe-time">
+                                    <p>Time</p>
+                                    <p>15 Mins</p>
+                                </div>
+                                <div class="recipe-portion">
+                                    <p>Portion</p>
+                                    <p>1 Persons</p>
+                                </div>
                             </div>
                         </div>
                     </div>
+
                 </div>
             </section>
         </main>
-        <footer>
+        <footer class="footer-holy-souce">
             <div class="logo-holy-souce">
-                <object type="image/svg+xml" data="src/assets/images/logo/logo-holy-sauce-color.svg"></object>
+                <object type="image/svg+xml" data="src/assets/images/logos/logo-holy-sauce-color.svg"></object>
+                <p><span>Holy</span> Sauce</p>
             </div>
             <div class="legal-liks">
                 <a href="">Privacy Policy</a>
