--- a/index.html
+++ b/index.html
@@ -138,59 +138,88 @@
                     <div class="holy-souce-section-process-image col">
                         <img src="src/assets/images/general/fingers-holding-chili.png" alt="Fingers holding chili">
                     </div>
-                    <div class="holy-souce-section-process-item col">
-                        <div class="holy-souce-section-process-item-title">
-                            <div class="item-title-number-text">
-                                <div class="item-title-number">
-                                    <p>01</p>
+                    <div class="col">
+
+                        <div class="holy-souce-section-process-item">
+                            <div class="holy-souce-section-process-item-title" id="item01">
+                                <div class="item-title-number-text">
+                                    <div class="item-title-number">
+                                        <p>01</p>
+                                    </div>
+                                    <div class="item-title-text">
+                                        <p>Superior Seeds Selection</p>
+                                    </div>
                                 </div>
-                                <div class="item-title-text">
-                                    <p>Superior Seeds Selection</p>
-                                </div>
-                            </div>
-                            <div class="item-title-icon">
-                                <i class="fas fa-chevron-down"></i>
-                            </div>
-                        </div>
-                        <div class="holy-souce-section-process-item-title">
-                            <div class="item-title-number-text">
-                                <div class="item-title-number">
-                                    <p>02</p>
-                                </div>
-                                <div class="item-title-text">
-                                    <p>Sowing the Seeds</p>
+                                <div class="item-title-icon">
+                                    <i class="fas fa-chevron-down arrow01"></i>
+                                    <i class="fas fa-chevron-up arrow01" style="display: none;"></i>
                                 </div>
                             </div>
-                            <div class="item-title-icon">
-                                <i class="fas fa-chevron-down"></i>
+                            <div class="process-item-description" id="descriptionItem01">
+                                <p>We've been working with family farmers for generations to grow our delicious original taste.</p>
                             </div>
                         </div>
-                        <div class="holy-souce-section-process-item-title">
-                            <div class="item-title-number-text">
-                                <div class="item-title-number">
-                                    <p>03</p>
+
+                        <div class="holy-souce-section-process-item">
+                            <div class="holy-souce-section-process-item-title" id="item02">
+                                <div class="item-title-number-text">
+                                    <div class="item-title-number">
+                                        <p>02</p>
+                                    </div>
+                                    <div class="item-title-text">
+                                        <p>Sowing the Seeds</p>
+                                    </div>
                                 </div>
-                                <div class="item-title-text">
-                                    <p>Handmade Processing</p>
-                                </div>
-                            </div>
-                            <div class="item-title-icon">
-                                <i class="fas fa-chevron-down"></i>
-                            </div>
-                        </div>
-                        <div class="holy-souce-section-process-item-title">
-                            <div class="item-title-number-text">
-                                <div class="item-title-number">
-                                    <p>03</p>
-                                </div>
-                                <div class="item-title-text">
-                                    <p>Barrel-Aged for Bold Flavour</p>
+                                <div class="item-title-icon">
+                                    <i class="fas fa-chevron-down arrow02"></i>
+                                    <i class="fas fa-chevron-up arrow02" style="display: none;"></i>
                                 </div>
                             </div>
-                            <div class="item-title-icon">
-                                <i class="fas fa-chevron-down"></i>
+                            <div class="process-item-description" id="descriptionItem02">
+                                <p>We've been working with family farmers for generations to grow our delicious original taste.</p>
                             </div>
                         </div>
+
+                        <div class="holy-souce-section-process-item">
+                            <div class="holy-souce-section-process-item-title" id="item03">
+                                <div class="item-title-number-text">
+                                    <div class="item-title-number">
+                                        <p>03</p>
+                                    </div>
+                                    <div class="item-title-text">
+                                        <p>Handmade Processing</p>
+                                    </div>
+                                </div>
+                                <div class="item-title-icon">
+                                    <i class="fas fa-chevron-down arrow03"></i>
+                                    <i class="fas fa-chevron-up arrow03" style="display: none;"></i>
+                                </div>
+                            </div>
+                            <div class="process-item-description" id="descriptionItem03">
+                                <p>We've been working with family farmers for generations to grow our delicious original taste.</p>
+                            </div>
+                        </div>
+
+                        <div class="holy-souce-section-process-item">
+                            <div class="holy-souce-section-process-item-title" id="item04">
+                                <div class="item-title-number-text">
+                                    <div class="item-title-number">
+                                        <p>03</p>
+                                    </div>
+                                    <div class="item-title-text">
+                                        <p>Barrel-Aged for Bold Flavour</p>
+                                    </div>
+                                </div>
+                                <div class="item-title-icon">
+                                    <i class="fas fa-chevron-down arrow04"></i>
+                                    <i class="fas fa-chevron-up arrow04" style="display: none;"></i>
+                                </div>
+                            </div>
+                            <div class="process-item-description" id="descriptionItem04">
+                                <p>We've been working with family farmers for generations to grow our delicious original taste.</p>
+                            </div>
+                        </div>
+
                     </div>
                 </div>
             </section>
@@ -364,16 +393,7 @@
         <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.min.js" integrity="sha384-QJHtvGhmr9XOIpI6YVutG+2QOK9T+ZnN4kzFN1RtK3zEFEIsxhlmWl5/YESvpZ13" crossorigin="anonymous"></script>
 
 
-        <script>
-            $(window).scroll(function() {
-                if ($("#menu").offset().top > 56) {
-                    $("#menu").addClass("color-nav");
-                }else {
-                    $("#menu").removeClass("color-nav");
-                }
-            });
-         
-        </script>   
-
+        <script src="js/nav_bar.js"></script>
+        <script src="js/item_title_number.js"></script>
     </body>
 </html>
