Ajustes breakpoint mobile

--- a/index.html
+++ b/index.html
@@ -62,6 +62,11 @@
                 </div>
                 <div class="holy-souce-hero-producto">
                     <img class="img-fluid" src="src/assets/images/products/chili-sauce.png" alt="Banner Muhammad Syafi Al Adam">
+                    <div class="holy-souce-hero-title-mobile">
+                        <div class="hero-title-higher">
+                            <h1>Magic Everyday <br>for your Needs</h1>
+                        </div>
+                    </div>
                     <a href="">
                         <div class="holy-souce-hero-btn">
                             <p>Squeez Up</p>
@@ -71,23 +76,24 @@
             </section>
 
             <!-- Start SQUEEZE THINGS UP -->
-            <section class="holy-souce-section container">
-                <div class="row holy-souce-section-heading-title">
-                    <p>Tried and true since 1870</p>
-                </div>
-                <div class="row holy-souce-section-heading d-flex align-items-end">
-                    <div class="holy-souce-section-heading-title col d-flex justify-content-start">
-                        <h2><span>squeeze</span><br> things up</h2>
+            <section class="holy-souce-section">
+                <div class="container">
+                    <div class="row holy-souce-section-heading-title">
+                        <p>Tried and true since 1870</p>
                     </div>
-                    <div class="holy-souce-section-heading-link col d-flex justify-content-end">
-                        <a href="">
-                            <p>Shop our products ></p>
-                        </a>
+                    <div class="row holy-souce-section-heading d-flex align-items-end">
+                        <div class="holy-souce-section-heading-title col d-flex justify-content-start">
+                            <h2><span>squeeze</span><br> things up</h2>
+                        </div>
+                        <div class="holy-souce-section-heading-link col d-flex justify-content-end">
+                            <a href="">
+                                <p>Shop our products ></p>
+                            </a>
+                        </div>
                     </div>
                 </div>
 
-                <div class="holy-souce-section-product">
-                    <!-- <div class="background-content"></div> -->
+                <div class="holy-souce-section-product container">
                     <div class="row product-content">
                         <div class="holy-souce-section-product-image col">
                             <div class="product-image">
@@ -124,11 +130,11 @@
                 <div class="row holy-souce-section-heading-title">
                     <p>Years of authentic process</p>
                 </div>
-                <div class="row holy-souce-section-heading d-flex align-items-end">
-                    <div class="holy-souce-section-heading-title col d-flex justify-content-start">
+                <div class="row holy-souce-section-heading align-items-end d-flex flex-lg-row flex-column justify-content-center">
+                    <div class="holy-souce-section-heading-title col">
                         <h2>From seeds to <br><span>bottles</span></h2>
                     </div>
-                    <div class="holy-souce-section-heading-link col d-flex justify-content-start">
+                    <div class="holy-souce-section-heading-link col">
                         <p>We've been working with family farmers for <br>generations to grow our delicious original <br>taste.</p>
                     </div>
                 </div>
