Se ajusto index mobile y desktop

--- a/index.html
+++ b/index.html
@@ -128,7 +128,9 @@
             <!-- Start FROM SEEDS TO BOTTLES -->
             <section class="holy-souce-section container">
                 <div class="row holy-souce-section-heading-title">
-                    <p>Years of authentic process</p>
+                    <div class="col">
+                        
+                    </div>
                 </div>
                 <div class="row holy-souce-section-heading align-items-end d-flex flex-lg-row flex-column justify-content-center">
                     <div class="holy-souce-section-heading-title col">
@@ -144,10 +146,10 @@
                     <div class="holy-souce-section-process-image col">
                         <img src="src/assets/images/general/fingers-holding-chili.png" alt="Fingers holding chili">
                     </div>
-                    <div class="col">
+                    <div class="col holy-souce-section-process-item">
 
-                        <div class="holy-souce-section-process-item">
-                            <div class="holy-souce-section-process-item-title" id="item01">
+                        <div class="process-item">
+                            <div class="process-item-title" id="item01">
                                 <div class="item-title-number-text">
                                     <div class="item-title-number">
                                         <p>01</p>
@@ -166,8 +168,8 @@
                             </div>
                         </div>
 
-                        <div class="holy-souce-section-process-item">
-                            <div class="holy-souce-section-process-item-title" id="item02">
+                        <div class="process-item">
+                            <div class="process-item-title" id="item02">
                                 <div class="item-title-number-text">
                                     <div class="item-title-number">
                                         <p>02</p>
@@ -186,8 +188,8 @@
                             </div>
                         </div>
 
-                        <div class="holy-souce-section-process-item">
-                            <div class="holy-souce-section-process-item-title" id="item03">
+                        <div class="process-item">
+                            <div class="process-item-title" id="item03">
                                 <div class="item-title-number-text">
                                     <div class="item-title-number">
                                         <p>03</p>
@@ -206,8 +208,8 @@
                             </div>
                         </div>
 
-                        <div class="holy-souce-section-process-item">
-                            <div class="holy-souce-section-process-item-title" id="item04">
+                        <div class="process-item">
+                            <div class="process-item-title" id="item04">
                                 <div class="item-title-number-text">
                                     <div class="item-title-number">
                                         <p>03</p>
@@ -225,7 +227,6 @@
                                 <p>We've been working with family farmers for generations to grow our delicious original taste.</p>
                             </div>
                         </div>
-
                     </div>
                 </div>
             </section>
