Se ajusto index.html

--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
     </head>
     <body class="holy-souce">
         <header>
-            <nav class="navbar navbar-expand-lg navbar-light background-nav fixed-top" id="menu">
+            <nav class="navbar navbar-expand-lg navbar-dark background-nav fixed-top" id="menu">
                 <div class="container">
                     <div class="image-brand">
                         <object type="image/svg+xml" data="src/assets/images/logos/logo-holy-sauce.svg"></object>
